[package]
name = "backtracer"
version = "0.0.2"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>",
           "Alex Crichton <alex@alexcrichton.com>",
           "The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/gz/backtracer"
homepage = "https://github.com/gz/backtracer"
documentation = "https://docs.rs/backtracer"

description = """
A library to acquire a stack trace (backtrace) at runtime in a no-std Rust program.
"""

[dependencies]
cfg-if = "0.1"
log = "0.4"
addr2line = { path="../addr2line", default-features = false, features = ["alloc", "rustc-demangle"] }
#addr2line =  { version = "0.14.1", default-features = false, features = ["alloc", "rustc-demangle"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { path = "../cortex-a" }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { path = "../riscv" }
